set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
set (TARGET_NAME imgfiler)

file (GLOB folder_SOURCES *.c)
file (GLOB folder_HEADERS *.h)

set(OPTIONAL_LIBS)

if (EXTRACTOR_FOUND)
  set(OPTIONAL_LIBS ${OPTIONAL_LIBS} ${EXTRACTOR_LIBRARY})
endif(EXTRACTOR_FOUND)

add_executable(${TARGET_NAME} ${folder_SOURCES} ${folder_HEADERS})
target_link_libraries (${TARGET_NAME} ${EXIF_LIBRARIES} ${OPTIONAL_LIBS} ${OPENSSL_LIBRARIES})
include_directories(${CMAKE_BINARY_DIR})

install(TARGETS ${TARGET_NAME} DESTINATION bin)
